--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
             </em>
           </small>
         </div>-->
-        <a href="http://yongyuan.name/"><img class="avatar" src="http://yongyuan.name/imgs/yongyuan_55.png" alt="My profile picture" /></a>
+        <a href="http://qumingzhentmnan.github.io/"><img class="avatar" src="http://qumingzhentmnan.github.io/imgs/1.png" alt="My profile picture" /></a>
       </div>
       <div class="clear"></div>
     </header>
