--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,7 +5,7 @@ layout: default
 <div class="inner">
   {{ content }}
   <div class="fancy center convinced">
-    Interested? Here's my <a href="https://github.com/qumingzhentmnan">Github</a> and <a href="https://github.com/qumingzhentmnan/quminghaonan.github.io">resume</a>,
+    Interested? Here's my <a href="https://github.com/qumingzhentmnan">Github</a> and <a href="https://qumingzhentmnan.github.io">resume</a>,
     let's <a href="/contact">get in touch</a>.
   </div>
 </div>
