--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -27,7 +27,7 @@ layout: default
 
     <br /><br />-->
 
-    Here's my <a href="https://github.com/qumingzhentmnan">Github</a> and <a href="https://github.com/qumingzhentmnan/quminghaonan.github.io">resume</a>,
+    Here's my <a href="https://github.com/qumingzhentmnan">Github</a> and <a href="https://qumingzhentmnan.github.io">resume</a>,
     let's <a href="/contact">get in touch</a>.
 </div>
 
