--- a/_layouts/simplePage.html
+++ b/_layouts/simplePage.html
@@ -38,7 +38,7 @@
         <a class="{% if page.category == 'project-zh' %} selected {% endif %}" href="/cn/project">项目</a>
         <!--<a class="{% if page.category == 'resume' %} selected {% endif %}" href="/resume/">Resume</a>-->
         <!--<a href="/resume/">简历</a>-->
-        <a href="/YongYuan_resume.pdf">简历</a>
+        <a href="/resume.pdf">简历</a>
         <!--<a class="{% if page.category == 'publication' %} selected {% endif %}" href="/publication/">出版</a>-->
         <a class="{% if page.category == 'blog' %} selected {% endif %}" href="/blog/">博客</a>
         <a href="/books/">书单</a>
@@ -69,7 +69,7 @@
         <a class="{% if page.category == 'blog' %} selected {% endif %}" href="/blog/">Blog</a>
         <a href="/books/">Book</a>
         <a href="/timeline/">Times</a>
-        <a href="https://github.com/willard-yuan">Github</a>
+        <a href="https://github.com/qumingzhentmnan">Github</a>
       </nav>
     {% endif %}
 
@@ -86,7 +86,7 @@
             </em>
           </small>
         </div>-->
-        <a href="https://github.com/qumingzhentmnan/quminghaonan.github.io"><img class="avatar" src="/imgs/1.png" alt="My profile picture" /></a>
+        <a href="https://qumingzhentmnan.github.io"><img class="avatar" src="/imgs/1.png" alt="My profile picture" /></a>
       </div>
       <div class="clear"></div>
     </header>
