--- a/_layouts/simplePage.html
+++ b/_layouts/simplePage.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../css/site.css">
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   {% if page.description %}<meta name="description" content="{{page.description}}" />{% endif %}
-  <link rel="alternate" type="application/atom+xml" title="RSS Feed for Yong Yuan's blog" href="/feed.xml" />
+  <link rel="alternate" type="application/atom+xml" title="RSS Feed for lucy zhou's blog" href="/feed.xml" />
 
   {% if page.url == '/index.html' %}
     <link rel="alternate" hreflang="ch" href="/cn/" />
@@ -51,7 +51,7 @@
         <a class="{% if page.category == 'project-zh' %} selected {% endif %}" href="/cn/project">项目</a>
         <!--<a class="{% if page.category == 'resume' %} selected {% endif %}" href="/resume/">Resume</a>-->
         <!--<a href="/yuanyong_resume_cn.pdf">简历</a>-->
-        <a href="/YongYuan_resume.pdf">简历</a>
+        <a href="/resume.pdf">简历</a>
         <!--<a class="{% if page.category == 'publication' %} selected {% endif %}" href="/publication/">出版</a>-->
         <a class="{% if page.category == 'blog' %} selected {% endif %}" href="/blog/">博客</a>
         <a href="/books/">书单</a>
